[project]
name = "hip-sdc-rebuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "pandas>=2.3.3",
    "psycopg>=3.2.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
